v0.18.0 2020-05-03T19:53:12+0800
  - Add a site-specific for www.ttv.com.tw
  - Add a site-specific for www.hkcnews.com
  - Add a site-specific for www.thestandnews.com
  - Add a site-specific for www.epochtimes.com

v0.17.0 2020-05-03T09:15:32+0800
  - Improve the extraction of journalist names on cnews, EBC, CTEE and SETN
  - Add a site-specific extractor for newnet.tw

v0.16.0 2020-04-26T21:36:41+0800
  - Improve the extraction of journalist names on CTS, CTEE and rti.fr

v0.15.0 2020-04-23T09:17:50+0800
  - Reduce the amonut of warnings.

v0.14.0 2020-04-08T00:00:54+0800
  - Improve the extraction of journalist names on ETToday and CNA

v0.13.0 2020-03-22T16:20:13+0800
  - Improve the extraction of journalist names on www.setn.com

v0.12.0 2020-03-09T09:57:13+0900
  - Improve the extraction of www.upmedia.mg
  - Improve the extraction of journalist names on www.setn.com

v0.11.0 2020-02-15T09:54:00+0900
  - Improve the accuracy of extracting www.taiwannews.com.tw
  - Improve the extraction of news.cts.com.tw
  - Add a site-specific extractor for estate.ltn.com.tw

v0.10.0 2020-02-04T09:01:00+0900
  - Improve the extraction of turnnewsapp.com
  - Improve coverage for various cases.

v0.9.0 2020-02-04T01:21:00+0900
  - Improve the extraction of news.tnn.tw
  - Improve the extraction of www.setn.com

v0.8.0 2020-02-03T09:52:00+0900
  - Improve the extraction of www.rti.org.tw
  - Improve the extraction of www.bcc.com.tw

v0.7.0 2020-02-02T10:28:00+0900
  - Improve the extraction of www.taipeitimes.com
  - Improve the extraction of udn.com
  - Improve the extraction of money.udn.com
  - Improve the extraction of stars.udn.com
  - Improve the extraction of house.udn.com

v0.6.0 2020-02-01T19:51:00+0900
  - Reject the extracted journalist name if it happens to be one of the known newspaper name.
  - Improve the extraction of https://www.storm.mg

v0.5.0 2020-01-29T10:30:00+0900
  - Improve the extraction of a few news site.

0.4.0 2020-01-26T01:51:45+0900